sidux-hermes (0.1.1) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 10 Feb 2009 02:23:57 +0100

sidux-hermes (0.1.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * Initial release.
  * Qt4: update time changed
  * Cli: kernel function added
  * QT4: Kernel function added
  * Gtk2: conlicts tag updated
  * QT4: upgradable packages dialog added.
  * QT4: sidux-apt-qt4 options added. 
  * QT4: display upgradable packages function updated.
  * QT4: de translation updated.
  * Debian: descriptions improved. 

  [ Stefan Lippers-Hollmann ]
  * add ${misc:Depends} where needed.

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 08 Feb 2009 00:42:01 +0100